2002-02-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_OR): improve doxygenation

	* include/libbk_oscompat.h: undef _CONSTRUCTOR_ATTRIBUTE,_INIT_PRAGMA
	for Insure++ compilation
	
2002-02-11  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_intcols): DOH Some real dumb errors.

2002-02-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_intcols): fix bugs, spelling errors,
	restrict bases

2002-02-07  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_process): possible decriptor leak repair

	* lib/b_string.c (bk_string_intcols): Count columns required for int

2002-01-31  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/Makefile (BK_LARGE_LIB): use ${LIBEXT} for libtool build

2002-01-30  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (ntohll, htonll): 64-bit host/network order

2002-01-24  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: control some inclusions from autoconf

	* include/libbk_oscompat.h: autoconf control for sockaddr sa_len
	(BK_INIT_FUN): macro for load-time init
	(AF_LOCAL): define if missing but AF_UNIX exists

	* lib/b_netutils.c (bk_netutils_get_sa_len): use autoconf control

	* lib/b_time.c (bk_time_iso_parse): avoid mktime if it has bugs

2002-01-20  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_skid.c: Initial SKID implementation, or at least the
	*start* of the implementation.

	* lib/b_ioh.c (bk_ioh_coalesce): New coalescion code to centralize
	common activities with ioh buffers.

	* lib/b_relay.c (bk_relay_iohhandler): Use new ioh coalescion code

2002-01-19  James Tanis  <jtt@winwood.sysdetect.com>

	* include/libbk_oscompat.h (realloc): Redefine realloc to
	specifically use malloc when ptr is NULL (mostly for Insight,
	though protects against *really* broken malloc libs).

2002-01-19  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_ioh.c (bk_ioh_update): Duh, forgot to actually allow
	iofunopaque to be updated
